tests/machine/x/java/string_in_operator.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsstring_in_operator2177641151/001/Main.java:4: error: ')' or ',' expected
		System.out.println("cat" in s);
		                        ^
/tmp/TestCompileValidProgramsstring_in_operator2177641151/001/Main.java:4: error: ';' expected
		System.out.println("cat" in s);
		                             ^
/tmp/TestCompileValidProgramsstring_in_operator2177641151/001/Main.java:5: error: ')' or ',' expected
		System.out.println("dog" in s);
		                        ^
/tmp/TestCompileValidProgramsstring_in_operator2177641151/001/Main.java:5: error: ';' expected
		System.out.println("dog" in s);
		                             ^
4 errors


  1| let s = "catch"
  2| print("cat" in s)
