tests/machine/x/java/string_in_operator.java
public class Main {
	public static void main(String[] args) {
		int s = "catch";
		System.out.println("cat" in s);
		System.out.println("dog" in s);
	}
}
